updated front page and letter

--- a/report.tex
+++ b/report.tex
@@ -24,19 +24,19 @@
     \vspace{1cm}
     \vspace*{\fill}
     
-    % \includegraphics[scale=0.2]{jiit_logo}\\
+    \includegraphics[scale=0.2]{jiit_logo}\\
     
     \vspace{1.5cm}
     \Huge
-    \textbf{Mathematics PBL Report}\\
+    \textbf{Physics PBL Report}\\
     \Large
     
-    \textbf{Harmonic Oscillators Using Differential Equations}\\
+    \textbf{Einstein's General Relativity}\\
     \vspace{1cm}
 
     \Large
     \textbf{Submitted to}\\
-    Dr. Nisha Shukla
+    Dr. Sandeep Mishra
     \vspace{1cm}
 
     \textbf{Submitted by}
@@ -45,9 +45,6 @@
     \begin{tabular}{ll}
         Harsh Sharma & 2401030232 \\
         Karvy Singh & 2401030234 \\
-        Kunal Sharma & 2401030236 \\
-        Rudra Kumar Singh & 2401030237 \\
-        Mukul Aggarwal & 2401030239 \\
     \end{tabular}
 
     \vspace*{\fill}
@@ -61,9 +58,9 @@
 \vspace{1cm}
 
 \noindent
-\textbf{Dr. Nisha Shukla} \\
+\textbf{Dr. Sandeep Mishra} \\
 [0.5em]
-Department of Mathematics \\
+Department of Physics and Materials Science and Engineering\\
 [0.5em]
 % University/Institute Name \\
 % [Address] \\
@@ -71,17 +68,17 @@ Department of Mathematics \\
 \vspace{1cm}
 
 \noindent
-\textbf{Subject:} Submission of Report on ``Harmonic Oscillators Using Differential Equations''
+\textbf{Subject:} Submission of Report on ``Einstein's General Relativity''
 
 \vspace{1cm}
 
 \noindent
-Dear Dr. Nisha Shukla,
+Dear Dr. Sandeep Mishra,
 
 \vspace{1em}
 
 \noindent
-We are pleased to submit our report titled \textit{``Harmonic Oscillators Using Differential Equations''} as part of our coursework. This report explores the mathematical foundations of harmonic oscillators, focusing on differential equations and their applications in modeling simple harmonic motion, damped harmonic motion, and electrical analogs like RLC circuits.
+We are pleased to submit our report titled \textit{``Einstein's General Relativity''} as part of our coursework. This report explores the mathematical foundations of harmonic oscillators, focusing on differential equations and their applications in modeling simple harmonic motion, damped harmonic motion, and electrical analogs like RLC circuits.
 
 \vspace{1em}
 
@@ -101,9 +98,6 @@ Sincerely, \\[2em]
 \noindent
 Harsh Sharma (2401030232)\\
 Karvy Singh (2401030234)\\
-Kunal Sharma (2401030236)\\
-Rudra Kumar Singh (2401030237)\\
-Mukul Aggarwal (2401030239)
 
 \vspace{2cm}
 
