--- a/report.tex
+++ b/report.tex
@@ -247,8 +247,86 @@ t_{ff} = t + 2\sqrt{2Mr} + 2M \ln \left| \frac{\sqrt{r} - \sqrt{2M}}{\sqrt{r} + 
 \end{itemize}
 
 
-\end{document}
+\section{Penrose Diagram}
+If we normalise this graph so that light cones travel at 45°, 
+Then we see that the singularity of black holes is not 
+actually a place in space, but a moment in time.
+The last of moment for anything in the black hole.
 
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{penrose}   \\ 
+\end{center}
+
+The horizontal axis in this graph/map represents space. 
+The opposite vertices are at infinite distances from each other.
+
+The vertical axis represents time.
+The opposite vertices are apart by an enternity.
+
+
+
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{white_hole}    
+\end{center}
+
+If we put an observer at the left vertex of this map. The observer's future is always inside the black hole.
+If we draw the light cones, what would be in the observers past light cone?
+
+Putting the coordinates, in the equation. It reveals a strange area. 
+One where an observer can go back into our universe or the black hole. The White Hole.
+
+Now, instead of going to right of the white hole if go into the left, we find ourselves into another universe. Similar to ours, yet differnt. The Parallel Universe.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{whole_penrose_diagram}    
+\end{center}
+
+This is very science-fictiony but this is what the math reveals if we take Schwarzchild's solution at face value and put in the coordinates.
+
+\section{Einstein-Rosen Bridge}
+The Einstein-Rosen bridge, often referred to as a wormhole, is a theoretical construct that arises from the equations of general relativity and we can see it from the previous maps! Here, the Einstein-Rosen bridge represents a tunnel-like connection between our universe and the parallel universe. This idea emerged when Albert Einstein and Nathan Rosen extended the Schwarzschild solution for non-rotating black holes, showing that the geometry does not simply terminate at the singularity but can continue into a mirrored spacetime region. This "bridge" theoretically links these regions through a shared throat.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{bridge_map.png}
+    \includegraphics[width=0.8\textwidth]{einsten_rosen_bridge.png}    
+\end{center}
+
+However, there are significant limitations to its practicality. The Einstein-Rosen bridge is not inherently traversable; any attempt to pass through it would result in the throat collapsing faster than the speed of light, making passage impossible. This instability arises because the bridge is part of a static solution in an idealized, vacuum-dominated spacetime. Later theoretical work, including that of Kip Thorne, suggested that exotic matter with negative energy density could stabilize such structures, potentially making traversable wormholes possible. While still speculative, Einstein-Rosen bridges remain a fascinating concept, bridging physics and the imagination by hinting at the possibility of connecting distant regions of spacetime or even parallel universes.
+
+
+\section{Rotating Black Holes: the Key to Parallel Universes}
+Rotating black holes, described by the Kerr solution to Einstein’s field equations, reveal a complex spacetime structure that goes beyond the simpler non-rotating (Schwarzschild) black holes. Unlike their static counterparts, rotating black holes have multiple event horizons and an additional region called the ergosphere, where spacetime itself is dragged around the black hole at speeds exceeding the speed of light relative to distant observers. This "dragging" creates fascinating possibilities, including the theoretical connection to other universes.
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{rotating_black_holes.png}    
+\end{center}
+
+These solutions are described by:
+
+\[
+ds^2 = -\left(1 - \frac{2Mr}{\Sigma}\right) dt^2 
+       - \frac{4Mar\sin^2\theta}{\Sigma} dt \, d\phi 
+       + \frac{\Sigma}{\Delta} dr^2 
+       + \Sigma \, d\theta^2 
+       + \left(r^2 + a^2 + \frac{2Ma^2r\sin^2\theta}{\Sigma}\right) \sin^2\theta \, d\phi^2,
+\]
+
+Deep inside a rotating black hole, past the outer event horizon and the inner horizon, lies the ring singularity. Unlike the point-like singularity in non-rotating black holes, this ring-shaped singularity theoretically allows spacetime to remain smooth enough for objects to pass through. If you were to aim directly for the center of the ring, the equations suggest you could emerge into an entirely new region of spacetime—a parallel universe. This connection occurs because the ring singularity can act like a bridge, redirecting your path through the highly warped spacetime.
+
+\begin{center}
+    \includegraphics[width=0.8\textwidth]{rotating_maps.png}    
+\end{center}
+
+However, this journey is purely theoretical. The inner regions of a Kerr black hole are likely unstable, with massive energy accumulations near the inner horizon potentially disrupting the spacetime geometry. Moreover, navigating these regions without being torn apart by intense gravitational forces would require technologies far beyond what we currently understand. Nevertheless, the mathematics of general relativity opens the tantalizing possibility that rotating black holes could serve as portals to alternate universes, even if their physical realization remains speculative.
+
+\section{Conclusion}
+The exploration of black holes, wormholes, and spacetime bridges like the Einstein-Rosen bridge reveals the profound depth and complexity of general relativity. These concepts stretch our understanding of the universe, offering tantalizing possibilities such as shortcuts across spacetime, gateways to parallel universes, and the existence of exotic matter. While much of this remains speculative and faces significant physical and mathematical challenges, the theoretical frameworks developed by Einstein, Schwarzschild, Kerr, and others provide a glimpse into the extraordinary potential of spacetime’s geometry. Rotating black holes, with their intricate structures and connections to alternate universes, and wormholes, as hypothetical spacetime shortcuts, continue to inspire both scientific inquiry and human imagination. Although practical exploration of these phenomena lies far in the future, their study reminds us of the boundless curiosity and ingenuity that drive our quest to understand the cosmos. As our knowledge grows, so too does the possibility that one day these once purely theoretical constructs may reshape our understanding of reality itself.
+
+\section{References}
+\begin{itemize}
+    \item Veritasium - A YouTube Channel: https://www.youtube.com/watch?v=6akmv1bsz1M
+    \item Einstein, A. (1915). "The Field Equations of Gravitation." Sitzungsberichte der Preußischen Akademie der Wissenschaften.
+\end{itemize}
+
+
+\end{document}
 
 
 
